// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-loader should download page assets 1`] = `
"<!DOCTYPE html><html><head>
    <title>Example Domain</title>
    <meta charset=\\"utf-8\\">
    <meta http-equiv=\\"Content-type\\" content=\\"text/html; charset=utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link href=\\"/courses\\" rel=\\"canonical\\">
    <link rel=\\"stylesheet\\" href=\\"ru-hexlet-io_files/assets-style.css\\">
    <link rel=\\"stylesheet\\" href=\\"https://cdn2.hexlet.io/packs/css/25-f5455698.chunk.css\\">
  </head>

  <body>
    <div>
      <h1>Example Domain</h1>
      <p>
        This domain is for use in illustrative examples in documents. You may
        use this domain in literature without prior coordination or asking for
        permission.
      </p>
      <img src=\\"ru-hexlet-io_files/assets-image.jpg\\">
      <p>
        <a href=\\"https://www.iana.org/domains/example\\">More information...</a>
      </p>
    </div>
    <script src=\\"ru-hexlet-io_files/assets-script.js\\"></script>
  

</body></html>"
`;

exports[`page-loader should download page file 1`] = `
"<!DOCTYPE html><html><head>
    <title>Example Domain</title>
    <meta charset=\\"utf-8\\">
    <meta http-equiv=\\"Content-type\\" content=\\"text/html; charset=utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link href=\\"/courses\\" rel=\\"canonical\\">
  </head>

  <body>
    <div>
      <h1>Example Domain</h1>
      <p>
        This domain is for use in illustrative examples in documents. You may
        use this domain in literature without prior coordination or asking for
        permission.
      </p>
      <p>
        <a href=\\"https://www.iana.org/domains/example\\">More information...</a>
      </p>
    </div>
  

</body></html>"
`;

exports[`page-loader throws error when output path not exists 1`] = `"ENOENT: no such file or directory, open '/notexitst/ru-hexlet-io.html'"`;

exports[`page-loader throws error when page unavailable 1`] = `"Request failed with status code 404 (https://ru.hexlet.io)"`;

exports[`page-loader throws on network errors 1`] = `"Nock: Disallowed net connect for \\"ru.hexlet.io:443/\\" (https://ru.hexlet.io)"`;
